fix (alignments) : add missed margin auto for alignwide

--- a/src/scss/05-blocks/_alignments.scss
+++ b/src/scss/05-blocks/_alignments.scss
@@ -12,6 +12,8 @@
 .alignwide,
 .wide-max-width {
     max-width: var(--responsive--alignwide-width);
+    margin-right: auto;
+    margin-left: auto;
 }
 
 // Editor
